--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,13 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: "lts/*"
+    - name: edit local.properties
+      env:
+      YT_API_KEY: {{$secrets.YT_API_KEY}}
+      run:|
+      echo youtubeAPIKey="$YT_API_KEY" > local.properties
+      shell: bash
+
     - name: Build with Gradle
       run: ./gradlew --no-daemon build
     - name: Setup semantic-release
